Switch to generator-based variation flow